Fixed Image Bugs

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
             <p class="message">Start Guessing...</p>
             <p class="label-score">💯 Score: <span class="score">10</span></p>
             <p class="label-highscore">
-              🥇 Highscore: <span class="highscore">0</span>
+             🎯 Highscore: <span class="highscore">0</span>
             </p>
           </section>
         </center>
