--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
           <section class="left">
             <!--these two need to be in dif div-->
             <div class="inputBox scol-12 mcol-12 lcol-12">
-              <input type="number" class="guess" placeholder="Enter"/>
+              <input type="number" class="guess" placeholder="Enter Here"/>
             </div>
 
             <div class="ButtonBox scol-12 mcol-12 lcol-12">
